Adding force field settings to boids gives hard crash #37906

Closed
opened 2013-12-21 06:23:53 +01:00 by Stephen Hamacek · 7 comments

System Information
Operating system and graphics card
OSX 10.7.5
2 machines: Radeon HD 2600 and Gforce GT 330M

Blender Version
Broken: Blender 2.69 d71bcab
Broken: Blender 2.69 2195dd3
Worked: Blender 2.69 r60991

Short description of error
Selecting any of the force field types in this boids emitter crashes blender. Works OK with official build though.
Should I even be reporting if official build ok, but newer is not?

Exact steps for others to reproduce the error

  1. Load .blend ;)
  2. select icosphere if not already
  3. select an effect (Type 1 or 2) in force-field settings
  4. Boom! Crashes for me...

BoidsBugTest.blend

**System Information** Operating system and graphics card OSX 10.7.5 2 machines: Radeon HD 2600 and Gforce GT 330M **Blender Version** Broken: Blender 2.69 d71bcab Broken: Blender 2.69 2195dd3 Worked: Blender 2.69 r60991 **Short description of error** Selecting any of the force field types in this boids emitter crashes blender. Works OK with official build though. Should I even be reporting if official build ok, but newer is not? **Exact steps for others to reproduce the error** 1. Load .blend ;) 2. select icosphere if not already 3. select an effect (Type 1 or 2) in force-field settings 4. Boom! Crashes for me... [BoidsBugTest.blend](https://archive.blender.org/developer/F48698/BoidsBugTest.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @StephenHamacek

Added subscriber: @StephenHamacek
Sergey Sharybin self-assigned this 2013-12-21 15:30:25 +01:00

This issue was referenced by blender/blender-addons-contrib@f72b86da8c

This issue was referenced by blender/blender-addons-contrib@f72b86da8cab4bff482fc58095d14c97823fa39f

This issue was referenced by f72b86da8c

This issue was referenced by f72b86da8cab4bff482fc58095d14c97823fa39f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit f72b86da8c.

Closed by commit f72b86da8c.

Thanks so much sergey!

Thanks so much sergey!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37906
No description provided.