Fix T37906: Adding force field settings to boids gives hard crash

Was a regression since fix for another bug T37189.